--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-app.title=This spring configuration file and welcome to Lumen Intern 2025.
+app.title=Advanced Java and Microservices Development for intern 2025
